# xxx

./: .dockerignore  .env  .gitignore  Cargo.toml  README.md  SECURITY.md  compose.yml  logs.sh  restart.sh  run.sh  xxx.Dockerfile
.github/workflows/: ci.yml
coreos/: Containerfile  butane.bu
coreos-components/etcd/: Containerfile
crates/cli/: Cargo.toml  README.md
crates/cli/src/: container.rs  lib.rs  main.rs  repl.rs
crates/cli/tests/: container_integration_tests.rs  repl_integration_tests.rs
crates/container-api/: Cargo.toml  Dockerfile
crates/container-api/src/: lib.rs  main.rs
crates/containers-api/: .dockerignore  Cargo.toml  Dockerfile
crates/containers-api/src/: main.rs
crates/repl-api/: .dockerignore  Cargo.toml  Dockerfile
crates/repl-api/src/: lib.rs  main.rs  rate_limit.rs  security.rs  tls.rs
crates/service-registry/: Cargo.toml  Dockerfile
crates/service-registry-macros/: Cargo.toml
crates/service-registry-macros/src/: lib.rs
crates/service-registry/examples/: simple.rs  with_macro.rs
crates/service-registry/src/: api.rs  bootstrap.rs  error.rs  lib.rs  main.rs  registry.rs  service.rs
crates/supervisor/: Cargo.toml  Dockerfile
crates/supervisor/src/: main.rs
crates/ui/client/: package.json
crates/ui/client/src/: APITester.tsx  App.tsx  ReplTester.tsx  index.html  index.tsx
crates/xxx/: Cargo.toml
crates/xxx-cloud/deployment-gcp/: .env.example  DEPLOYMENT_GUIDE.md  SECURITY_REVIEW.md  SECURITY_STATUS.md  cdktf.json  main.ts  package.json
crates/xxx-cloud/deployment-gcp/google/vm_assets/: compose.yml
crates/xxx-cloud/deployment-gcp/vm_assets/: compose.yml
crates/xxx/src/: main.rs
docs/: architecture.md
repl-api/: Cargo.toml
scripts/: cli-integration-test.sh  repl-language-test.sh  run.sh
smoke_checks/: test-api-create-container.ts  test-api-list-containers.ts
src/: main.rs
