[workspace]
resolver = "2"
members = [
    "crates/container-api", "crates/repl-api", "crates/xxx", "crates/cli",
]

[workspace.dependencies]
axum = "0.8"
#tokio = { version = "1", features = ["full"] }
#serde = { version = "1.0.228", features = ["derive"] }
#serde_json = "1.0.145"
#tower = "0.5"
#tower-http = { version = "0.6", features = ["trace"] }
#tracing = "0.1"
#tracing-subscriber = { version = "0.3", features = ["env-filter"] }
#dotenv = "0.15.0"
