[package]
name = "container-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"
[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
podman-api = "0.10"
dotenv = "0.15.0"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
tokio-stream = "0.1.17"
futures-util = "0.3"
async-stream = "0.3"
service-registry = { path = "../service-registry" }
hostname = "0.4"
