[package]
name = "service-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
etcd-client = "0.14"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
hostname = "0.4"
service-registry-macros = { path = "../service-registry-macros" }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
url = "2.5"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dev-dependencies]
tokio-test = "0.4"
