[package]
name = "xxx"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"

[dependencies]
axum = {workspace = true}
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15.0"
repl-api = { path = "../repl-api" }
container-api = { path = "../container-api" }

[dev-dependencies]
tower = "0.5"